--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,13 +57,20 @@
     "date_of_birth": "Date Of Birth",
     "gender": "Gender",
     "address": "Address",
+    "street": "Street",
     "suburb": "Suburb",
     "state": "State",
     "postcode": "Postcode",
     "description": "Description",
-    "send_sms_notification": "Send sms notification",
-    "send_email_notification": "Send email notification",
-    "recieve_marketing_email": "Recieve marketing email",
+    "send_sms_notification": "Send SMS notifications to client",
+    "send_email_notification": "Send email notifications to client",
+    "recieve_marketing_email": "Client agrees to receive marketing emails",
     "phone_number_334_error": "${path} must match the following: 999-999-9999",
-    "--select--": "--Select--"
+    "--select--": "--Select--",
+    "typing_address": "Start typing address",
+    "remove": "Remove",
+    "male": "Male",
+    "female": "Female",
+    "other": "Other",
+    "notification": "Notification"
 }
