--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -86,5 +86,9 @@
     "add_new": "Add New",
     "edit": "Edit",
     "sms": "SMS",
-    "delete": "Delete"
+    "delete": "Delete",
+    "confirmation_delete_text": "You won't be able to revert this!",
+    "are_you_sure": "Are you sure?",
+    "are_you_sure_delete_client": "Are you sure want to delete this client?",
+    "yes_delete_it": "Yes, delete it!"
 }
