--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -114,5 +114,6 @@
     "updated": "Updated",
     "deleted": "Deleted",
     "saved": "Saved",
-    "submited": "Submited"
+    "submited": "Submited",
+    "phone": "Phone"
 }
