--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -117,5 +117,27 @@
     "submited": "Submited",
     "phone": "Phone",
     "more": "More",
-    "no_data_found": "No data found"
+    "no_data_found": "No data found",
+    "products": "Products",
+    "suppliers": "Suppliers",
+    "no_products_have_been_created_yet": "No products have been created yet.",
+    "no_suppliers_have_been_created_yet": "No suppliers have been created yet.",
+    "please_create_one": "Please create one",
+    "product_name": "Product Name",
+    "sku": "SKU",
+    "supplier": "Supplier",
+    "stock": "Stock",
+    "retail_price": "Retail Price",
+    "new_product": "New Product",
+    "new_supplier": "New Supplier",
+    "cancel": "Cancel",
+    "save": "Save",
+    "add_the_name_of_the_supplier": "Add the name of the supplier.",
+    "supplier_name": "Supplier Name",
+    "contact_information": "Contact Information",
+    "add_the_contact_details_of_this_supplier": "Add the contact details of this supplier.",
+    "add_supplier_Logo": "Add Supplier Logo",
+    "add_the_address_of_this_supplier": "Add the address of this supplier.",
+    "website": "Website",
+    "logo": "logo"
 }
