--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -91,6 +91,7 @@
     "confirmation_delete_text": "You won't be able to revert this!",
     "are_you_sure": "Are you sure?",
     "are_you_sure_delete_client": "Are you sure want to delete this client?",
+    "are_you_sure_delete_supplier": "Are you sure want to delete this supplier?",
     "yes_delete_it": "Yes, delete it!",
     "appointments": "Appointments",
     "appointment": "Appointment",
