--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -128,9 +128,12 @@
     "sku": "SKU",
     "supplier": "Supplier",
     "stock": "Stock",
+    "cost_price": "Cost Price",
     "retail_price": "Retail Price",
     "new_product": "New Product",
     "new_supplier": "New Supplier",
+    "edit_product": "Edit Product",
+    "edit_supplier": "Edit Supplier",
     "cancel": "Cancel",
     "save": "Save",
     "add_the_name_of_the_supplier": "Add the name of the supplier.",
@@ -140,5 +143,18 @@
     "add_supplier_Logo": "Add Supplier Logo",
     "add_the_address_of_this_supplier": "Add the address of this supplier.",
     "website": "Website",
-    "logo": "logo"
+    "logo": "logo",
+    "product": "Product",
+    "add_the_name_of_the_product": "Add the name of the product.",
+    "add_the_name_and_general_details_of_this_product": "Add the name and general details of this product.",
+    "add_product_image": "Add Product Image",
+    "price": "Price",
+    "add_the_pricing_details_of_this_product": "Add the pricing details of this product.",
+    "tax": "Tax",
+    "included_in_price": "Included in price",
+    "inventory": "Inventory",
+    "manage_stock_levels_of_this_product": "Manage stock levels of this product.",
+    "manage_stock": "Manage Stock",
+    "stock_quantity": "Stock Quantity",
+    "low_stock_threshold": "Low Stock Threshold"
 }
