product updated changes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -50,6 +50,7 @@
             "length": "${path} must have ${length} items"
         }
     },
+    "action": "Action",
     "name": "Name",
     "first_name": "First Name",
     "last_name": "Last Name",
