--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -161,5 +161,28 @@
     "low_stock_threshold": "Low Stock Threshold",
     "The_field_should_have_digits_only": "The field should have digits only",
     "The_field_should_have_decimal_only": "The field should have decimal only",
-    "search_option": "Search..."
+    "search_option": "Search...",
+    "services": "Services",
+    "categories": "Categories",
+    "category": "Category",
+    "no_services_have_been_created_yet": "No services have been created yet.",
+    "no_categories_have_been_created_yet": "No categories have been created yet.",
+    "service_name": "Service Name",
+    "new_service": "New Service",
+    "new_category": "New Category",
+    "add_category": "Add Category",
+    "edit_service": "Edit Service",
+    "edit_category": "Edit Category",
+    "add_the_name_of_the_category": "Add the name of the category.",
+    "category_name": "Category Name",
+    "add_the_contact_details_of_this_category": "Add the contact details of this category.",
+    "add_category_Logo": "Add Category Logo",
+    "add_the_address_of_this_category": "Add the address of this category.",
+    "service": "Service",
+    "add_the_name_of_the_service": "Add the name of the service.",
+    "add_the_name_and_general_details_of_this_service": "Add the name and general details of this service.",
+    "add_service_image": "Add Service Image",
+    "add_the_pricing_details_of_this_service": "Add the pricing details of this service.",
+    "manage_stock_levels_of_this_service": "Manage stock levels of this service."
+
 }
